<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mahjong</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_newGame">新的故事</string>
    <string name="button_goOn">好的继续</string>
    <string name="button_oldMemory">旧的回忆</string>
    <string name="dong">东：</string>
    <string name="nan">南：</string>
    <string name="xi">西：</string>
    <string name="bei">北：</string>
    <string name="jdValue">金顶值：</string>
    <string name="completed">完成</string>
    <string name="action_add">添加</string>
    <string name="action_exit">退出</string>
    <string name="action_manage">设置</string>
    <string name="hint_playerName">玩家姓名</string>
    <string name="hint_jds">金顶值(默认为150)</string>    
    
</resources>