<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    	android:gravity="center"
		android:weightSum="1"
        >
    	<TextView
    	    android:id="@+id/info_tvDong"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.3"
    	    android:gravity="right"
    	    android:text="@string/dong" />
    	<EditText
    	    android:id="@+id/info_editPlayerOne"
    	    android:hint="@string/hint_playerName"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:labelFor="@id/info_editPlayerOne"
    	    android:inputType="text"
    	    android:layout_weight="0.7"
    	    />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    	android:gravity="center"
		android:weightSum="1"        
        >
    	<TextView
			android:id="@+id/info_tvNan"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:text="@string/nan"
    	    android:layout_weight="0.3"
    	    android:gravity="right"
    	    />
    	<EditText
    	    android:id="@+id/info_editPlayerTwo"
    	    android:hint="@string/hint_playerName"    	    
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:labelFor="@id/info_editPlayerTwo"
    	    android:inputType="text"
    	    android:layout_weight="0.7"    	    
    	    />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    	android:gravity="center"
		android:weightSum="1"        
        >
    	<TextView
    	    android:id="@+id/info_tvXi"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:text="@string/xi"
			android:layout_weight="0.3"
    	    android:gravity="right"
    	    />

    	<EditText
    	    android:id="@+id/info_editPlayerThree"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.7"
    	    android:hint="@string/hint_playerName"
    	    android:inputType="text"
    	    android:labelFor="@id/info_editPlayerThree" />

    </LinearLayout>
    	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    	android:gravity="center"
		android:weightSum="1"        
        >
    	<TextView
    	    android:id="@+id/info_tvBei"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:text="@string/bei"
    	    android:layout_weight="0.3"
    	    android:gravity="right"    	    
    	    />
    	<EditText
    	    android:id="@+id/info_editPlayerFour"
    	    android:hint="@string/hint_playerName"    	    
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:labelFor="@id/info_editPlayerFour"
    	    android:inputType="text"
    	    android:layout_weight="0.7"    	    
    	    />
    </LinearLayout>  
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    	android:gravity="center"
		android:weightSum="1"        
        >
    	<TextView
    	    android:id="@+id/info_tvJDValue"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:text="@string/jdValue"
    	    android:layout_weight="0.3"
    	    android:gravity="right"    	    
    	    />
    	<EditText
    	    android:id="@+id/info_etJDValue"
    	    android:hint="@string/hint_jds"    	    
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:labelFor="@id/info_etJDValue"
    	    android:inputType="number"
    	    android:layout_weight="0.7"    	    
    	    />
    </LinearLayout>    
  
</LinearLayout>
