<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.roger.mahjong.MainActivity"
    tools:ignore="MergeRootFrame" >

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="1"
    >
    <Button
        android:id="@+id/button_NewGame"
        style="?android:attr/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.8"
        android:onClick="NewGameOnClick"
        android:text="@string/button_newGame" >
    </Button>
</LinearLayout>

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="1"
    >    
    <Button
        android:id="@+id/button_OldMemory"
        style="?android:attr/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.8"
        android:onClick="OldMemoryOnClick"
        android:text="@string/button_oldMemory" >
    </Button>
</LinearLayout>    
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="1"
    >
    <Button
        android:id="@+id/button_GoOn"
        style="?android:attr/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.8"
        android:onClick="GoOnClick"
        android:text="@string/button_goOn" >
    </Button>
</LinearLayout>
</LinearLayout>

