<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    	android:gravity="center"
		android:weightSum="1"
        >
    	<TextView
    	    android:id="@+id/add_tvDong"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.1"
    	    android:gravity="right"
    	    android:text="@string/dong" />
    	<EditText
    	    android:id="@+id/add_editPlayerOne"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:labelFor="@id/add_editPlayerOne"
    	    android:inputType="number"
    	    android:layout_weight="0.9"
    	    />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    	android:gravity="center"
		android:weightSum="1"        
        >
    	<TextView
			android:id="@+id/add_tvNan"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:text="@string/nan"
    	    android:layout_weight="0.2"
    	    android:gravity="right"
    	    />
    	<EditText
    	    android:id="@+id/add_editPlayerTwo"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:labelFor="@id/add_editPlayerTwo"
    	    android:inputType="number"
    	    android:layout_weight="0.8"    	    
    	    />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    	android:gravity="center"
		android:weightSum="1"        
        >
    	<TextView
    	    android:id="@+id/add_tvXi"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:text="@string/xi"
			android:layout_weight="0.3"
    	    android:gravity="right"
    	    />
    	<EditText
    	    android:id="@+id/add_editPlayerThree"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:labelFor="@id/add_editPlayerThree"
    	    android:inputType="number"
    	    android:layout_weight="0.7"    	    
    	    />
    </LinearLayout>
    	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    	android:gravity="center"
		android:weightSum="1"        
        >
    	<TextView
    	    android:id="@+id/add_tvBei"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:text="@string/bei"
    	    android:layout_weight="0.4"
    	    android:gravity="right"    	    
    	    />
    	<EditText
    	    android:id="@+id/add_editPlayerFour"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:labelFor="@id/add_editPlayerFour"
    	    android:inputType="number"
    	    android:layout_weight="0.6"    	    
    	    />
    </LinearLayout>  
  
</LinearLayout>
